<resources>
    <string name="app_name">PolitiSwap</string>
    <string name="toolbar_title" translatable="false">PolitiSwap</string>

    <string name="action_faq">FAQ</string>
    <string name="action_signout">Sign out</string>
    <string name="action_privacy">Privacy Policy</string>

    <!--<string name="test_ad_id" translatable="false">ca-app-pub-2592878146760147/8912356003</string>
    <string name="test_app_id" translatable="false">ca-app-pub-2592878146760147~2476662363</string>-->

    <string name="widget_policy_header">New Policies today!</string>
    <string name="widget_swap_header">New Swaps today!</string>

    <string name="tab_swaps">Swaps</string>
    <string name="tab_policies">Policies</string>
    <string name="tab_activity">My Activity</string>
    <string name="tab_legislation">Real Legislation</string>

    <string name="bottom_swaps_rated">Top Rated</string>
    <string name="bottom_swaps_new">New</string>
    <string name="bottom_swaps_search">Browse</string>

    <string name="bottom_policies_wanted">Most Wanted</string>
    <string name="bottom_policies_new">New</string>
    <string name="bottom_policies_search">Browse</string>

    <string name="bottom_activity_swaps">Swaps</string>
    <string name="bottom_activity_policies">Policies</string>
    <string name="bottom_activity_score">Score</string>

    <string name="bottom_legislation_recent">Recent</string>
    <string name="bottom_legislation_search">Search</string>

    <string name="sponsored_by">Sponsored by: %1$s</string>
    <string name="bill_no_subject">Subject not stated</string>

    <string name="craft_policy_header">Craft New Policy</string>
    <string name="craft_policy_subject_title">Subjects</string>
    <string name="craft_policy_title_title">Title</string>
    <string name="craft_policy_summary_title">Body</string>
    <string name="craft_policy_subject_hint">Select one or more policy areas:</string>
    <string name="craft_policy_title_hint">Enter a title for your policy.</string>
    <string name="craft_policy_summary_hint">Enter the details of your policy.</string>
    <string name="craft_policy_save_and_publish">Save and publish</string>
    <string name="craft_policy_cancel">Cancel and Exit</string>
    <string name="craft_policy_back">Back to Previous Screen</string>
    <string name="craft_policy_next">Save and Continue</string>
    <string name="craft_policy_close_warning">Are you sure you want to close? Progress will not be saved.</string>
    <string name="craft_policy_close_title">Closing new policy&#8230;</string>
    <string name="craft_policy_close_confirm">Close</string>
    <string name="craft_policy_close_cancel">Cancel</string>
    <string name="craft_policy_small_back">Back</string>
    <string name="craft_policy_subject_placeholder">No policy area selected.</string>
    <string name="craft_policy_title_placeholder">No title entered.</string>
    <string name="craft_policy_summary_placeholder">No details entered.</string>
    <string name="steps_1">Step 1 of 3</string>
    <string name="steps_2">Step 2 of 3</string>
    <string name="steps_3">Step 3 of 3</string>
    <string name="step_1_policy_subject_empty_error">Please choose at least 1 policy area.</string>
    <string name="step_1_policy_subject_num_selected"> \n(%1$s selected)</string>
    <string name="step_2_policy_title_empty_error">Please enter a title for your policy.</string>
    <string name="step_3_policy_summary_empty_error">Please enter details for your policy.</string>
    <string name="craft_policy_preview_title">Here\'s your new policy:</string>
    <string name="craft_policy_publish_title">Publish Policy</string>
    <string name="craft_policy_publish_message">Would you like to publish this policy?  It will be visible to all users.</string>
    <string name="craft_policy_publish_yes">Publish</string>

    <string name="policy_net_wanted">%1$d %2$ss want this policy.</string>

    <string name="share_yes">Share</string>
    <string name="share_no">No Thanks</string>
    <string name="share_header">Congrats!</string>
    <string name="share_message">Your new policy has been publish.\nWould you like to share it?</string>

    <string name="search_alt_subject_hint">Select a policy area:</string>
    <string name="search_alt_go_button">Fetch policies related to %1$s</string>
    <string name="search_alt_warning">You may only search one policy area\nat a time</string>

    <string name="guest_policy_fab_title">Login to Create Policy</string>
    <string name="guest_policy_fab_message">You must log in with a verified account to create new app content.  You may stay here and read content or return to login.</string>
    <string name="guest_policy_fab_yes">Go to login</string>
    <string name="guest_policy_fab_no">Stay here</string>

    <string name="verify_email_title">Verify Email</string>
    <string name="verify_email_message">Please request a verification email and/or check your account for it.  Until verified, you will be able to read but not create content.</string>
    <string name="verify_email_yes">Send email, login again</string>
    <string name="verify_email_neutral">Let me check (back to login)</string>
    <string name="verify_email_no">Stay here as guest</string>
    <string name="verify_email_sent">Email sent successfully; check your inbox</string>
    <string name="verify_email_send_fail">Verification email failed</string>

    <string name="party_choice_dialog_title">Choose a Party</string>
    <string name="party_choice_dialog_message">In order to proceed, select the party that most nearly fits you.</string>
    <string name="party_choice_dialog_democrat">Democrat</string>
    <string name="party_choice_dialog_republican">Republican</string>

    <string name="policy_detail_yes_button">I want this policy.</string>
    <string name="policy_detail_no_button">I don\'t want this policy.</string>
    <string name="policy_detail_already_voted_button">You have voted on this policy. Click here to change vote.</string>
    <string name="policy_detail_other_party_button">You cannot vote on another party\'s policy.</string>
    <string name="policy_detail_guest_button">You cannot vote as a guest.</string>
    <string name="policy_detail_vote_self">You cannot vote on your own policy.</string>

    <string name="policy_yes_vote_partial">in favor of</string>
    <string name="policy_no_vote_partial">against</string>
    <string name="policy_neutral_vote_partial">neutral on</string>
    <string name="policy_vote_message">You have voted %1$s this policy.</string>

    <string name="change_policy_vote_yes">Switch Vote</string>
    <string name="change_policy_vote_no">Keep Vote</string>
    <string name="change_policy_vote_remove">Remove Vote</string>
    <string name="change_policy_vote_title">Change Vote</string>
    <string name="change_policy_vote_no_response">Your current vote has been retained.</string>
    <string name="change_policy_vote_message">Your current vote is %1$s the policy.  Would you like to switch it?</string>

    <string name="source_propublica" translatable="false">Source: ProPublica</string>
    <string name="search_propublica">Search Congressional Database</string>

    <string name="craft_swap_dem_button">Select a Democratic policy</string>
    <string name="craft_swap_rep_button">Select a Republican policy</string>
    <string name="craft_swap_placeholder_creator">Creator</string>
    <string name="craft_swap_placeholder_subject">subject</string>
    <string name="craft_swap_placeholder_title">Title</string>
    <string name="craft_swap_placeholder_summary">Policy detail \n&#8230;</string>
    <string name="craft_swap_placeholder_count">0 constituents want this policy.</string>
    <string name="craft_swap_placeholder_rating">Swap rating: 0</string>
    <string name="craft_swap_proposer">Proposed by: %1$s on %2$s</string>
    <string name="craft_swap_rating">Swap rating: %1$s</string>
    <string name="craft_swap_header">Craft New Swap</string>
    <string name="craft_swap_choice_header">%1$s Policies</string>
    <string name="craft_swap_choice_instruction">Select a browsing method.</string>
    <string name="craft_swap_browse_subject">by subject</string>
    <string name="craft_swap_browse_recent">most recent</string>
    <string name="craft_swap_browse_top">most wanted</string>
    <string name="craft_swap_no_policies">No policies matching your criteria were found.</string>
    <string name="craft_swap_close_title">Closing new swap&#8230;</string>
    <string name="craft_swap_change_dem_policy">Change Democratic policy</string>
    <string name="craft_swap_change_rep_policy">Change Republican policy</string>
    <string name="craft_swap_publish">Publish swap</string>
    <string name="craft_swap_change_either_policy">Change a policy</string>
    <string name="craft_swap_publish_title">Publish Swap</string>
    <string name="craft_swap_publish_message">Would you like to publish this swap?  It will be visible to all users.</string>
    <string name="craft_swap_duplicate_message">This swap already exists.  Please change one or more of the policies and try again.</string>

    <string name="swap_detail_yes_button">I like this swap.</string>
    <string name="swap_detail_no_button">I don\'t like this swap.</string>
    <string name="swap_detail_guest_button">You cannot vote as a guest.</string>
    <string name="swap_detail_vote_self">You cannot vote on your own swap.</string>
    <string name="swap_detail_already_voted_button">You have voted on this swap. Click here to change vote.</string>

    <string name="browse_refresh_button">Refresh</string>
    <string name="guest">Guest</string>

    <string name="no_network_button">Try Again.</string>
    <string name="no_network_message">Oops!  It looks like you\'re not connected to a network.  Establish a connection and try again.</string>

    <string name="user_score_overall">Your score is: %1$s</string>
    <string name="user_score_swap_creation">Your points from created swaps: %1$s</string>
    <string name="user_score_policy_creation">Your points from created policies: %1$s</string>
    <string name="user_score_votes">Your points from votes: %1$s</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_title">My PolitiSwap</string>
    <string name="widget_score_overall">Total Score: %1$s</string>
    <string name="widget_score_swap_creation">Swaps: %1$s</string>
    <string name="widget_score_policy_creation">Policies: %1$s</string>
    <string name="widget_score_votes">Votes: %1$s</string>
    <string name="widget_no_account_message">Please create an account to get widget updates.</string>

    <string name="legislation_error_message">Something went wrong. Try Again?</string>
    <string name="swaps_error_message">No Swaps found. Try Again?</string>
    <string name="policies_error_message">No Policies found. Try Again?</string>

    <string name="app_title">PolitiSwap</string>

    <string name="launch_see_swaps">Swaps</string>
    <string name="launch_see_policies">Policies</string>
    <string name="launch_see_legislation">Real Legislation</string>
    <string name="launch_see_score">Score</string>

    <string name="test_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>

    <string name="search_policy_hint">Search policies</string>

    <string name="completed_created">created</string>
    <string name="completed_voted">voted</string>
    <string name="completed_commmented">commented</string>

    <string name="policy_rating_hint">Score</string>
    <string name="policy_creator_string">Created by: %1$s</string>
    <string name="policy_vote_button">Vote</string>
    <string name="policy_content_subjects">Subjects: %1$s</string>


</resources>