<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_swaps"
            android:icon="@drawable/ic_keyboard_arrow_right_black"
            android:title="@string/launch_see_swaps" />
        <item
            android:id="@+id/nav_policies"
            android:icon="@drawable/ic_keyboard_arrow_right_black"
            android:title="@string/launch_see_policies" />
        <item
            android:id="@+id/nav_legislation"
            android:icon="@drawable/ic_keyboard_arrow_right_black"
            android:title="@string/launch_see_legislation" />
        <item
            android:id="@+id/nav_scores"
            android:icon="@drawable/ic_keyboard_arrow_right_black"
            android:title="@string/launch_see_score" />
    </group>

</menu>