<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".LaunchActivity">

    <ImageView
        android:id="@+id/launch_view_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="132dp"
        android:adjustViewBounds="true"
        android:src="@drawable/politiswap_chopped3" />

    <Button
        android:id="@+id/launch_view_swaps_button"
        android:text="@string/launch_see_swaps"
        style="@style/LoginButton"/>

    <Button
        android:id="@+id/launch_view_policies_button"
        android:text="@string/launch_see_policies"
        style="@style/LoginButton" />

    <Button
        android:id="@+id/launch_view_legislation_button"
        android:text="@string/launch_see_legislation"
        style="@style/LoginButton" />

    <Button
        android:id="@+id/launch_view_tutorial_button"
        android:text="@string/launch_see_score"
        style="@style/LoginButton" />

</LinearLayout>
</layout>