<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_gray">

    <TextView
        android:id="@+id/create_swap_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/craft_swap_header"
        android:textColor="@color/darkGray"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@id/swap_included_layouts_frame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/swap_included_layouts_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/craft_swap_choices_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_swap_header_text_view">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/create_swap_progress_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lighter_gray">

            <include
                android:id="@+id/create_swap_included_layout"
                layout="@layout/swap_layout_card_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/create_swap_dem_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/button_dem_background"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/craft_swap_dem_button"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/create_swap_rep_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_swap_included_layout" />

            <Button
                android:id="@+id/create_swap_rep_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_rep_background"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/craft_swap_rep_button"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_swap_dem_button" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/create_swap_browse_method_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lighter_gray"
            android:visibility="gone">

            <TextView
                android:id="@+id/create_swap_browse_choices_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/craft_swap_choice_instruction"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@id/create_swap_browse_subject_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/create_swap_browse_subject_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/craft_swap_browse_subject"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@id/create_swap_browse_recent_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_swap_browse_choices_text" />

            <Button
                android:id="@+id/create_swap_browse_recent_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/craft_swap_browse_recent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@id/create_swap_browse_top_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_swap_browse_subject_button" />

            <Button
                android:id="@+id/create_swap_browse_top_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/craft_swap_browse_top"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_swap_browse_recent_button" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/create_swap_choices_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lighter_gray"
            android:visibility="gone">

            <FrameLayout
                android:id="@+id/create_swap_policy_choices_inner_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/create_swap_choices_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/create_swap_no_policies_found_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/craft_swap_no_policies"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:visibility="gone" />
            </FrameLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/create_swap_subject_choices_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lighter_gray"
            android:visibility="gone">

            <include
                android:id="@+id/create_swap_subject_entry_included_layout"
                layout="@layout/subject_entry_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

    <Button
        android:id="@+id/craft_swap_choices_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/craft_policy_close_cancel"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swap_included_layouts_frame"/>

    <ImageButton
        android:id="@+id/craft_swap_dialog_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/craft_policy_close_confirm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_close_black_24dp" />

</android.support.constraint.ConstraintLayout>