<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/craft_policy_step_number_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/steps_1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@id/craft_subject_title_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"/>

    <TextView
        android:id="@+id/craft_subject_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/craft_policy_subject_hint"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toTopOf="@id/craft_subject_recycler_and_placeholder_frame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/craft_policy_step_number_1"
        app:layout_constraintVertical_weight="1"/>

    <FrameLayout
        android:id="@+id/craft_subject_recycler_and_placeholder_frame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/light_gray"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/craft_subject_available_recycler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/craft_subject_title_text_view"
        app:layout_constraintVertical_weight="2">

        <TextView
            android:id="@+id/craft_subject_placeholder_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="4dp"
            android:paddingEnd="24dp"
            android:paddingBottom="4dp"
            android:text="@string/craft_policy_subject_placeholder"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/raised_button_darker_red" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/craft_subject_selected_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/craft_subject_available_recycler"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@id/alt_search_go_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/craft_subject_recycler_and_placeholder_frame"
        app:layout_constraintVertical_weight="4"/>

    <Button
        android:id="@+id/alt_search_go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/craft_subject_available_recycler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/alt_search_cancel_button"/>
    <Button
        android:id="@+id/alt_search_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:text="@string/craft_policy_close_cancel"
        android:visibility="gone"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/alt_search_go_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>